src/test/ui/issues/issue-3477.stderr
error[E0308]: mismatched types
  --> $DIR/issue-3477.rs:2:20
   |
LL |     let _p: char = 100;
   |                    ^^^ expected char, found u8

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
