src/test/ui/issues/issue-3477.rs
fn main() {
    let _p: char = 100;
    //~^ ERROR mismatched types
    //~| expected char, found u8
}
